--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: imageSummaRy
 Type: Package
 Title: Summarizes (pixel) information of a given image
-Version: 0.1.0
+Version: 0.2.0
 Author: c(person("Kai", "Budde", email = "kai.budde@uni-rostock.de",
     role = c("aut", "cre")
 Maintainer: Kai Budde <kai.budde@uni-rostock.de>
@@ -13,4 +13,4 @@ LazyData: TRUE
 ByteCompile: TRUE
 RoxygenNote: 6.0.1
 NeedsCompilation: no
-Imports: tiff, dplyr
+Imports: tiff, dplyr, stats
